@@ -233,6 +233,38 @@ class FSFileTests(RequestTest, FSDVTest):
         self.assertEqual(self.RESPONSE.getHeader('content-type'),
                          'application/x-javascript; charset=utf-8')
 
+    def test_unnecessary_invalidation_avoidance(self):
+        # See https://bugs.launchpad.net/zope-cmf/+bug/325246
+        invalidated = []
+        def fake_invalidate(*args, **kw):
+            invalidated.append(True)
+        file = self._makeOne( 'test_file', 'test_file.swf' )
+        file.ZCacheable_invalidate = fake_invalidate
+
+        # First pass: The internal file modification representation
+        # equals the filesystem modification time.
+        del invalidated[:]
+        file._readFile(True)
+        self.failIf(invalidated)
+
+        del invalidated[:]
+        file._parsed = False
+        file._updateFromFS()
+        self.failIf(invalidated)
+
+        # Second pass: Forcing a different internal file modification
+        # time onto the instance. Now the file will be invalidated.
+        del invalidated[:]
+        file._file_mod_time = 0
+        file._readFile(True)
+        self.failUnless(invalidated)
+
+        del invalidated[:]
+        file._file_mod_time = 0
+        file._parsed = False
+        file._updateFromFS()
+        self.failUnless(invalidated)
+
 
 def test_suite():
     return unittest.TestSuite((
